github에서 시스템_설계서 오류로 보이는 부분 수정

--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -6,9 +6,9 @@
 ### 시스템 구성도
 ```mermaid
 graph LR
-    User[사용자] -- 브라우저 --> Frontend[Frontend (React)]
-    Frontend -- HTTP Requests --> Backend[Backend (JSON Server)]
-    Backend -- Read/Write --> WarningDB[(db.json)]
+    User[사용자] -- "브라우저" --> Frontend["Frontend (React)"]
+    Frontend -- "HTTP Requests" --> Backend["Backend (JSON Server)"]
+    Backend -- "Read/Write" --> Database[("db.json")]
 ```
 
 ## 2. 프론트엔드 설계 (Frontend)
