서버 배포 및 문서 보완

--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -28,16 +28,16 @@
 ### 2.4 Utils
 -   **UUID**: v13.0.0 (고유 ID 생성)
 
-## 3. 백엔드 및 데이터베이스 (Mock)
+## 3. 백엔드 및 데이터베이스 (Serverless)
 
-### 3.1 Server
--   **JSON Server**: v1.0.0-beta.3
-    -   REST API 전체(GET, POST, PUT, PATCH, DELETE)를 모사
-    -   `file:///c%3A/Users/Administrator/Desktop/AdvanceKeep/db.json` 파일을 데이터베이스로 사용
+### 3.1 Platform
+-   **Firebase**:
+    -   **Authentication**: 사용자 인증 처리
+    -   **Cloud Firestore**: NoSQL 데이터베이스
+    -   **Hosting**: 정적 웹 호스팅 (예정)
 
-### 3.2 실행 스크립트
--   **concurrently**: v9.2.1
-    -   `npm start` 명령어로 프론트엔드(Vite)와 백엔드(JSON Server)를 병렬 실행
+### 3.2 SDK
+-   **firebase**: v10.x.x
 
 ## 4. 코드 품질 관리
 -   **ESLint**: v9.39.1
