--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -7,8 +7,7 @@
 ```mermaid
 graph LR
     User[사용자] -- "브라우저" --> Frontend["Frontend (React)"]
-    Frontend -- "HTTP Requests" --> Backend["Backend (JSON Server)"]
-    Backend -- "Read/Write" --> Database[("db.json")]
+    Frontend -- "SDK" --> Firebase["Firebase (Auth & Firestore)"]
 ```
 
 ## 2. 프론트엔드 설계 (Frontend)
@@ -35,17 +34,19 @@ graph LR
 -   **InputArea**: 새로운 메모 작성 및 이미지 업로드 처리
 -   **MasonryLayout**: 핀터레스트 스타일의 그리드 레이아웃 구현
 
-## 3. 백엔드 설계 (Backend - Mock)
+## 3. 백엔드 설계 (Backend - Serverless)
 
 ### 3.1 기술 스택
--   **Server**: JSON Server
--   **Database**: 로컬 JSON 파일 (`db.json`)
+-   **Platform**: Firebase
+-   **Database**: Cloud Firestore (NoSQL)
+-   **Authentication**: Firebase Authentication
 
-### 3.2 데이터 스키마
-메모 데이터(`notes`)는 다음과 같은 구조를 가집니다:
+### 3.2 데이터 스키마 (Firestore Collection: `notes`)
+`notes` 컬렉션의 문서는 다음과 같은 필드를 가집니다:
 ```json
 {
-  "id": "uuid",
+  "id": "string (Auto ID)",
+  "uid": "string (User ID)",
   "title": "string",
   "content": "string",
   "images": ["url1", "url2"],
@@ -56,10 +57,12 @@ graph LR
   "updatedAt": "timestamp"
 }
 ```
+**참고**: `users` 컬렉션은 Firebase Auth로 대체되지만, 추가 사용자 정보가 필요한 경우 별도 컬렉션으로 관리할 수 있습니다.
 
 ## 4. 인터페이스 설계
 -   **API 통신**: `axios` 또는 `fetch`를 사용하여 RESTful API 호출
 -   **스타일링**: CSS Modules를 사용하여 컴포넌트별 스코프 지정
 
 ## 5. 실행 환경
--   `npm start` 명령어를 통해 `concurrently` 패키지를 사용하여 프론트엔드와 백엔드 서버를 동시에 구동합니다.
+-   `npm run dev` 명령어를 통해 프론트엔드 개발 서버를 구동합니다.
+-   백엔드는 Firebase 클라우드 서비스를 직접 이용합니다.
