--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -4,11 +4,11 @@
 **AdvanceKeep**은 당신의 아이디어를 쉽고 빠르게 기록할 수 있는 공간입니다.
 
 ## 1. 시작하기
-### 실행 방법
-1.  터미널을 엽니다.
-2.  프로젝트 폴더로 이동합니다.
-3.  `npm start` 명령어를 입력합니다.
-4.  자동으로 브라우저가 열리며(또는 `http://localhost:5173` 접속) 앱이 시작됩니다.
+## 1. 시작하기
+### 접속 방법
+1.  웹 브라우저(Chrome, Safari 등)를 엽니다.
+2.  **[https://advancekeep-1e051.web.app](https://advancekeep-1e051.web.app)** 주소로 접속합니다.
+3.  별도의 설치 없이 바로 이용 가능합니다.
 
 ## 2. 기본 사용법
 
