1. 수정, 삭제 title 속성 추가 2. 메모 고정 기능 추가 3. 문서 내용 보완

--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -51,4 +51,23 @@
 -   **Description**: 메모를 검색하는 기능
 -   **Input**: 검색어
 -   **Process**: 메모 생성/수정 시 텍스트 인덱싱 또는 클라이언트 사이드 필터링 수행
--   **Output**: 검색어가 제목 또는 내용에 포함된 메모만 필터링하여 표시
+-   **Output**: 검색어가 제목 또는 내용에 포함된 메모만 필터링하여 표시, 일치하는 텍스트는 노란색으로 하이라이트
+
+### F-07: 메모 고정/해제
+-   **Description**: 중요한 메모를 상단에 고정하는 기능
+-   **Input**: 메모 카드의 핀 아이콘 클릭
+-   **Process**:
+    1. `isPinned: true` 속성 설정
+    2. 고정된 메모는 "고정됨" 섹션에 표시
+    3. 해제 시 `isPinned: false`로 변경
+-   **Output**: 고정된 메모가 상단 영역에 분리되어 표시
+
+### F-08: 메모 공유
+-   **Description**: 다른 사용자와 메모를 공유하는 기능
+-   **Input**: 공유할 사용자의 이메일
+-   **Process**:
+    1. 메모 카드의 공유 버튼 클릭
+    2. 이메일 입력 모달 표시
+    3. 해당사용자의 ID를 메모의 `sharedWith` 배열에 추가
+    4. Firebase에 업데이트
+-   **Output**: 공유 배지 표시, 공유받은 사용자는 해당 메모 조회/수정 가능
