--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -17,21 +17,33 @@
 -   **REQ-03**: 사용자는 메모를 삭제하여 휴지통으로 이동시킬 수 있어야 한다.
 -   **REQ-04**: 사용자는 메모에 이미지를 첨부할 수 있어야 한다.
 -   **REQ-05**: 사용자는 메모를 리스트 뷰 또는 그리드 뷰(Masonry)로 전환하여 볼 수 있어야 한다.
+-   **REQ-06**: 사용자는 중요한 메모를 상단에 고정 할 수 있어야 한다.
 
 ### 3.2 텍스트 편집
--   **REQ-06**: 사용자는 마크다운 문법을 사용하여 텍스트를 포맷팅할 수 있어야 한다.
+-   **REQ-07**: 사용자는 마크다운 문법을 사용하여 텍스트를 포맷팅할 수 있어야 한다.
 
 ### 3.3 조직화 및 검색
--   **REQ-07**: 사용자는 키워드를 통해 메모를 실시간으로 검색할 수 있어야 한다.
--   **REQ-08**: 사용자는 중요하지 않은 메모를 보관함(Archive)으로 이동시킬 수 있어야 한다.
--   **REQ-09**: 보관된 메모는 보관함 탭에서 별도로 확인 가능해야 한다.
+-   **REQ-08**: 사용자는 키워드를 통해 메모를 실시간으로 검색할 수 있어야 한다.
+-   **REQ-09**: 검색 결과에서 일치하는 검색어가 하이라이트되어야 한다.
+-   **REQ-10**: 사용자는 중요하지 않은 메모를 보관함(Archive)으로 이동시킬 수 있어야 한다.
+-   **REQ-11**: 보관된 메모는 보관함 탭에서 별도로 확인 가능해야 한다.
 
 ### 3.4 휴지통 관리
--   **REQ-10**: 삭제된 메모는 휴지통에 임시 보관되어야 한다.
--   **REQ-11**: 사용자는 휴지통의 메모를 복원하거나 영구 삭제할 수 있어야 한다.
+-   **REQ-12**: 삭제된 메모는 휴지통에 임시 보관되어야 한다.
+-   **REQ-13**: 사용자는 휴지통의 메모를 복원하거나 영구 삭제할 수 있어야 한다.
 
-### 3.5 시스템 및 설정
--   **REQ-12**: 프론트엔드와 백엔드(Mock DB)는 하나의 명령어로 동시에 실행되어야 한다.
+### 3.5 공유 기능
+-   **REQ-14**: 사용자는 다른 사용자의 이메일을 통해 메모를 공유할 수 있어야 한다.
+-   **REQ-15**: 공유받은 사용자는 메모를 조회하고 수정할 수 있어야 한다.
+-   **REQ-16**: 메모 소유자는 공유를 취소할 수 있어야 한다.
+
+### 3.6 사용자 인증
+-   **REQ-17**: 사용자는 이메일과 비밀번호로 회원가입할 수 있어야 한다.
+-   **REQ-18**: 사용자는 로그인하여 개인화된 메모를 관리할 수 있어야 한다.
+
+### 3.7 시스템 및 설정
+-   **REQ-19**: 프론트엔드와 Firebase 백엔드는 하나의 명령어로 실행되어야 한다.
+-   **REQ-20**: 다크 모드를 지원하여 사용자 환경을 개선해야 한다.
 
 ## 4. 비기능적 요구사항 (Non-Functional Requirements)
 -   **성능**: 메모 로딩과 검색은 사용자에게 즉각적인 반응을 보여야 한다.
