이미지 확대에 대한 문서 보완

--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -16,8 +16,9 @@
 -   **REQ-02**: 사용자는 작성된 메모를 수정할 수 있어야 한다.
 -   **REQ-03**: 사용자는 메모를 삭제하여 휴지통으로 이동시킬 수 있어야 한다.
 -   **REQ-04**: 사용자는 메모에 이미지를 첨부할 수 있어야 한다.
--   **REQ-05**: 사용자는 메모를 리스트 뷰 또는 그리드 뷰(Masonry)로 전환하여 볼 수 있어야 한다.
--   **REQ-06**: 사용자는 중요한 메모를 상단에 고정 할 수 있어야 한다.
+-   **REQ-05**: 사용자는 첨부된 이미지를 클릭하여 전체 화면으로 확대할 수 있어야 한다.
+-   **REQ-06**: 사용자는 메모를 리스트 뷰 또는 그리드 뷰(Masonry)로 전환하여 볼 수 있어야 한다.
+-   **REQ-07**: 사용자는 중요한 메모를 상단에 고정 할 수 있어야 한다.
 
 ### 3.2 텍스트 편집
 -   **REQ-07**: 사용자는 마크다운 문법을 사용하여 텍스트를 포맷팅할 수 있어야 한다.
