--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -71,3 +71,12 @@
     3. 해당사용자의 ID를 메모의 `sharedWith` 배열에 추가
     4. Firebase에 업데이트
 -   **Output**: 공유 배지 표시, 공유받은 사용자는 해당 메모 조회/수정 가능
+
+### F-09: 이미지 확대 보기 (Lightbox)
+-   **Description**: 첨부된 이미지를 전체 화면으로 확대하여 보는 기능
+-   **Input**: 이미지 클릭
+-   **Process**:
+    1. 메모 카드, 등록 폼, 수정 모달의 이미지 클릭
+    2. `yet-another-react-lightbox` 라이브러리로 전체 화면 모달 표시
+    3. 여러 이미지가 있을 경우 좌우 화살표로 탐색 가능
+-   **Output**: 전체 화면 이미지 뷰어, ESC 키 또는 배경 클릭으로 닫기
