--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -23,6 +23,7 @@
 -   **CSS Modules**: 컴포넌트 레벨 스타일 캡슐화 (`.module.css`)
 -   **React Icons**: v5.5.0 (Material Design 아이콘 등 사용)
 -   **SweetAlert2**: v11.26.3 (사용자 알림 및 모달 인터페이스)
+-   **yet-another-react-lightbox**: 이미지 확대 보기 (Lightbox)
 -   **Masonry Layout**: 그리드 뷰 구현을 위한 라이브러리 사용 가능성 (또는 CSS Grid/Flex로 직접 구현)
 
 ### 2.4 Utils
