문서 내용 수정

--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -64,5 +64,5 @@ graph LR
 -   **스타일링**: CSS Modules를 사용하여 컴포넌트별 스코프 지정
 
 ## 5. 실행 환경
--   `npm run dev` 명령어를 통해 프론트엔드 개발 서버를 구동합니다.
+-   `npm start` 명령어를 통해 프론트엔드 개발 서버를 구동합니다.
 -   백엔드는 Firebase 클라우드 서비스를 직접 이용합니다.
