테스트 문서 내용 보완 필요

--- a/doc/5_테스트_계획서.md
+++ b/doc/5_테스트_계획서.md
@@ -15,7 +15,7 @@
 -   유틸리티 함수(`src/utils`)의 주요 로직 검증.
 
 ### 3.2 통합 테스트 (Integration Test)
--   프론트엔드와 JSON Server 간의 데이터 연동 테스트.
+-   프론트엔드와 FireBase 간의 데이터 연동 테스트.
 -   API 요청 및 응답 처리 확인.
 
 ### 3.3 UI/UX 테스트 (Manual)
