공유 기능 실시간으로 확인할 수 있도록 변경

--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -38,9 +38,9 @@
 -   **REQ-15**: 공유받은 사용자는 메모를 조회하고 수정할 수 있어야 한다.
 -   **REQ-16**: 메모 소유자는 공유를 취소할 수 있어야 한다.
 
-### 3.6 사용자 인증
--   **REQ-17**: 사용자는 이메일과 비밀번호로 회원가입할 수 있어야 한다.
--   **REQ-18**: 사용자는 로그인하여 개인화된 메모를 관리할 수 있어야 한다.
+-   **REQ-17**: 사용자는 이메일과 비밀번호로 회원가입 및 로그인하여 개인화된 메모를 관리할 수 있어야 한다.
+-   **REQ-18**: 보안을 위해 브라우저 종료 시 로그인 세션이 자동으로 만료되어야 한다.
+-   **REQ-19**: 메모 데이터(추가, 수정, 삭제, 공유 등)는 `onSnapshot`을 통해 모든 로그인 세션에서 실시간으로 동기화되어야 한다.
 
 ### 3.7 시스템 및 설정
 -   **REQ-19**: 프론트엔드와 Firebase 백엔드는 하나의 명령어로 실행되어야 한다.
