--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -35,9 +35,10 @@
 -   **Description**: 로컬 이미지를 메모에 첨부하는 기능
 -   **Input**: 이미지 파일 (JPG, PNG 등)
 -   **Process**:
-    1. `FileReader` API를 통해 이미지를 Base64 문자열로 변환 (현재 로컬 목업 단계)
-    2. 변환된 문자열을 메모 데이터의 `images` 배열에 저장
--   **Output**: 메모 카드 상단에 이미지 썸네일 표시
+    1. 사용자가 이미지 파일 선택
+    2. Firebase Storage에 업로드 및 다운로드 URL 획득
+    3. 메모 데이터의 `images` 배열에 URL 저장
+-   **Output**: 메모 카드 상단에 첨부된 이미지 표시
 
 ### F-05: 리스트/그리드 뷰 전환
 -   **Description**: 메모 목록의 레이아웃을 변경하는 기능
@@ -80,3 +81,9 @@
     2. `yet-another-react-lightbox` 라이브러리로 전체 화면 모달 표시
     3. 여러 이미지가 있을 경우 좌우 화살표로 탐색 가능
 -   **Output**: 전체 화면 이미지 뷰어, ESC 키 또는 배경 클릭으로 닫기
+### F-10: 실시간 데이터 동기화
+-   **Description**: 사용자의 작업이 실시간으로 모든 클라이언트에 반영되는 기능
+-   **Process**:
+    1. `onSnapshot` 리스너를 통해 Firestore의 변경 사항을 구독
+    2. 데이터 변경 발생 시 자동으로 UI 상태(State) 업데이트
+-   **Output**: 새로고침 없이 공유받은 메모가 나타나거나 수정된 내용이 즉시 반영됨
