--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -33,8 +33,9 @@
 
 ### 3.1 Platform
 -   **Firebase**:
-    -   **Authentication**: 사용자 인증 처리
-    -   **Cloud Firestore**: NoSQL 데이터베이스
+    -   **Authentication**: 사용자 인증 및 세션 관리 (`browserSessionPersistence`)
+    -   **Cloud Firestore**: NoSQL 데이터베이스 및 실시간 동기화 (`onSnapshot`)
+    -   **Storage**: 이미지 파일 저장
     -   **Hosting**: 정적 웹 호스팅 (예정)
 
 ### 3.2 SDK
