--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -1,13 +1,13 @@
 # 시스템 설계서 (System Design Document)
 
 ## 1. 아키텍처 개요
-**AdvanceKeep**은 클라이언트-서버 구조를 기반으로 하는 웹 애플리케이션입니다. 현재 단계에서는 빠른 프로토타이핑과 개발을 위해 Mock Backend를 사용하고 있습니다.
+**AdvanceKeep**은 클라이언트-서버 구조를 기반으로 하는 웹 애플리케이션입니다. Firebase를 백엔드로 활용하여 실시간 데이터 동기화와 서버리스 아키텍처를 구현하고 있습니다.
 
 ### 시스템 구성도
 ```mermaid
 graph LR
     User[사용자] -- "브라우저" --> Frontend["Frontend (React)"]
-    Frontend -- "SDK" --> Firebase["Firebase (Auth & Firestore)"]
+    Frontend -- "SDK" --> Firebase["Firebase (Auth, Firestore, Storage)"]
 ```
 
 ## 2. 프론트엔드 설계 (Frontend)
@@ -16,7 +16,7 @@ graph LR
 -   **Framework**: React 18
 -   **Build Tool**: Vite
 -   **Language**: JavaScript (ES6+)
--   **State Management**: React Context API & Custom Hooks
+-   **State Management**: React Context API & Custom Hooks (Optimistic Updates 적용)
 -   **Routing**: React Router v7
 
 ### 2.2 디렉토리 구조
@@ -24,45 +24,51 @@ graph LR
 
 -   `src/components`: UI 컴포넌트 (Common, Features, Layout)
 -   `src/pages`: 라우트별 페이지 (Home, Archive, Trash)
--   `src/hooks`: 비즈니스 로직 및 상태 관리 (useNotes 등)
--   `src/services`: API 통신 계층
--   `src/utils`: 공통 유틸리티 함수
+-   `src/hooks`: 비지니스 로직 및 상태 관리 (useNotes, useAuth 등)
+-   `src/services`: API 및 Firebase 통신 계층 (api.js, auth.js)
+-   `src/utils`: 공통 유틸리티 함수 및 헬퍼
 
 ### 2.3 주요 컴포넌트 설계
--   **App**: 최상위 컴포넌트, 라우팅 및 전역 레이아웃 관리
--   **NoteCard**: 개별 메모 표시, 이미지 렌더링, 호버 액션 처리
--   **InputArea**: 새로운 메모 작성 및 이미지 업로드 처리
--   **MasonryLayout**: 핀터레스트 스타일의 그리드 레이아웃 구현
+-   **NoteForm**: 메모 작성 폼. 커스텀 컬러 피커를 포함하며 이미지 업로드 및 배경색 지정을 담당.
+-   **NoteCard**: 개별 메모 표시. 배경색(`color`) 필드에 따른 동적 스타일링 적용.
+-   **EditNoteModal**: 메모 수정 모달. 실시간 배경색 프리뷰 및 데이터 업데이트 처리.
+-   **Layout**: 사이드바, 헤더 등 공통 레이아웃 요소 관리.
 
 ## 3. 백엔드 설계 (Backend - Serverless)
 
 ### 3.1 기술 스택
 -   **Platform**: Firebase
 -   **Database**: Cloud Firestore (NoSQL)
--   **Authentication**: Firebase Authentication
+-   **Authentication**: Firebase Authentication (Session Persistence 적용)
+-   **Storage**: Firebase Cloud Storage (이미지 호스팅)
 
 ### 3.2 데이터 스키마 (Firestore Collection: `notes`)
 `notes` 컬렉션의 문서는 다음과 같은 필드를 가집니다:
 ```json
 {
-  "id": "string (Auto ID)",
-  "uid": "string (User ID)",
+  "id": "string (UUID v4 / Firestore ID)",
+  "userId": "string (구 소유자 ID)",
+  "ownerId": "string (명시적 소유자 ID)",
   "title": "string",
-  "content": "string",
+  "text": "string (Markdown/RichText)",
   "images": ["url1", "url2"],
+  "image": "string (첫 번째 이미지 URL - 호환용)",
+  "color": "string (Hex code, default: #ffffff)",
   "isPinned": boolean,
   "isArchived": boolean,
-  "isTrashed": boolean,
-  "createdAt": "timestamp",
-  "updatedAt": "timestamp"
+  "inTrash": boolean,
+  "sharedWith": ["userId1", "userId2"],
+  "createdAt": "ISO 8601 string",
+  "updatedAt": "ISO 8601 string"
 }
 ```
-**참고**: `users` 컬렉션은 Firebase Auth로 대체되지만, 추가 사용자 정보가 필요한 경우 별도 컬렉션으로 관리할 수 있습니다.
 
-## 4. 인터페이스 설계
--   **API 통신**: `axios` 또는 `fetch`를 사용하여 RESTful API 호출
--   **스타일링**: CSS Modules를 사용하여 컴포넌트별 스코프 지정
+## 4. 스타일링 및 레이아웃
+-   **Vanilla CSS**: 전역 스타일 및 변수(`--bg-primary` 등) 관리.
+-   **Flexbox**: `action-tools` 그룹화 및 `margin-right: auto`를 활용한 동적 레이아웃 배치.
+-   **Grid**: 커스텀 컬러 피커 팔레트(`grid-template-columns`)에 활용.
+-   **Masonry**: `column-width`를 활용한 다중 열 그리드 레이아웃.
 
 ## 5. 실행 환경
--   `npm start` 명령어를 통해 프론트엔드 개발 서버를 구동합니다.
--   백엔드는 Firebase 클라우드 서비스를 직접 이용합니다.
+-   `npm start`: 프론트엔드 개발 서버(Vite)를 구동합니다.
+-   **Real-time**: Firebase SDK의 `onSnapshot` 리스너를 통해 별도의 API 요청 없이 실시간 데이터 동기화가 이루어집니다.
