--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -87,3 +87,11 @@
     1. `onSnapshot` 리스너를 통해 Firestore의 변경 사항을 구독
     2. 데이터 변경 발생 시 자동으로 UI 상태(State) 업데이트
 -   **Output**: 새로고침 없이 공유받은 메모가 나타나거나 수정된 내용이 즉시 반영됨
+### F-11: 메모 배경색 변경
+-   **Description**: 메모의 배경색을 변경하여 시각적으로 구분하는 기능
+-   **Input**: 배경색 변경 버튼(물방울 아이콘) 클릭 시 나타나는 색상 팔레트에서 색상 선택
+-   **Process**:
+    1. 사용자가 12가지 파스텔톤 색상 중 하나를 선택
+    2. 선택 즉시 폼 또는 모달의 배경색이 변경되어 프리뷰 제공
+    3. 저장 시 메모 데이터의 `color` 필드에 헥사코드(Hex code) 저장
+-   **Output**: 메모 카드의 배경이 선택한 색상으로 표시됨
