--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -20,11 +20,14 @@
     -   `BrowserRouter`, `Routes`, `Route`, `Link` 컴포넌트 활용
 
 ### 2.3 Styling & UI
--   **CSS Modules**: 컴포넌트 레벨 스타일 캡슐화 (`.module.css`)
--   **React Icons**: v5.5.0 (Material Design 아이콘 등 사용)
+-   **Vanilla CSS**: 전역 스타일(`index.css`) 및 레이아웃 제어
+    -   **Flexbox**: 버튼 그룹 정렬 및 `action-tools` 구성 (`margin-right: auto`를 활용한 그룹 분리)
+    -   **Grid**: 컬러 피커 팔레트 구현 (`grid-template-columns`)
+-   **React Icons**: v5.5.0 (Material Design 및 Feather 아이콘 사용)
+-   **Custom Color Picker**: 외부 라이브러리(`react-color`) 의존성 없이 React `useState`와 CSS를 활용하여 Google Keep 스타일 팔레트 직접 구현
 -   **SweetAlert2**: v11.26.3 (사용자 알림 및 모달 인터페이스)
 -   **yet-another-react-lightbox**: 이미지 확대 보기 (Lightbox)
--   **Masonry Layout**: 그리드 뷰 구현을 위한 라이브러리 사용 가능성 (또는 CSS Grid/Flex로 직접 구현)
+-   **Masonry Layout**: `column-width` 속성을 활용한 그리드 뷰 구현
 
 ### 2.4 Utils
 -   **UUID**: v13.0.0 (고유 ID 생성)
