--- a/doc/5_테스트_계획서.md
+++ b/doc/5_테스트_계획서.md
@@ -32,6 +32,9 @@
 | TC-04 | 메모 삭제 | 메모 존재 | 메모의 점 3개 메뉴 -> 삭제 클릭 | 메모가 메인 목록에서 사라지고 휴지통으로 이동 |
 | TC-05 | 뷰 전환 | 메모 다수 존재 | 상단 뷰 토글 버튼 클릭 | 리스트 뷰와 그리드 뷰가 교차로 전환됨 |
 | TC-06 | 검색 | 메모 존재 | 검색창에 특정 단어 입력 | 해당 단어가 포함된 메모만 필터링되어 표시됨 |
+| TC-07 | 배경색 지정 | 메모 작성 중 | 물방울 아이콘 클릭 -> 색상 칩 선택 | 메모 작성 폼의 배경색이 즉시 변경됨 |
+| TC-08 | 배경색 수정 | 메모 수정 중 | 모달에서 물방울 아이콘 클릭 -> 색상 칩 선택 | 모달의 배경색이 즉시 변경되며 저장 시 반영됨 |
+| TC-09 | 실시간 공유 | 메모 공유됨 | 한쪽 기기에서 내용/색상 변경 | 다른 기기에서 새로고침 없이 즉시 내용/색상이 변경됨 |
 
 ## 5. 버그 리포팅
 -   발견된 버그는 우선순위(Critical, Major, Minor)를 지정하여 기록 및 수정.
