--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -22,6 +22,11 @@
 2.  컴퓨터에서 원하는 이미지 파일을 선택합니다.
 3.  메모에 이미지가 첨부됩니다.
 
+### 메모 배경색 변경하기
+1.  메모 작성 중 또는 수정 중에 하단의 **물방울(💧) 아이콘**을 클릭합니다.
+2.  나타나는 색상 팔레트에서 원하는 배경색을 선택합니다.
+3.  선택한 색상이 즉시 메모에 적용됩니다.
+
 ### 메모 수정하기
 1.  수정하고 싶은 메모 카드를 클릭합니다.
 2.  내용을 수정합니다.
