구글로 로그인 기능 추가

--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -40,12 +40,13 @@
 -   **REQ-18**: 메모 소유자는 공유를 취소할 수 있어야 한다.
 
 -   **REQ-19**: 사용자는 이메일과 비밀번호로 회원가입 및 로그인하여 개인화된 메모를 관리할 수 있어야 한다.
--   **REQ-20**: 보안을 위해 브라우저 종료 시 로그인 세션이 자동으로 만료되어야 한다.
--   **REQ-21**: 메모 데이터(추가, 수정, 삭제, 공유 등)는 `onSnapshot`을 통해 모든 로그인 세션에서 실시간으로 동기화되어야 한다.
+-   **REQ-20**: 사용자는 구글 계정으로 간편하게 로그인할 수 있어야 한다.
+-   **REQ-21**: 사용자는 "로그인 상태 유지" 옵션을 선택하여 브라우저 종료 후에도 로그인 상태를 유지할 수 있어야 한다.
+-   **REQ-22**: 메모 데이터(추가, 수정, 삭제, 공유 등)는 `onSnapshot`을 통해 모든 로그인 세션에서 실시간으로 동기화되어야 한다.
 
 ### 3.7 시스템 및 설정
--   **REQ-22**: 프론트엔드와 Firebase 백엔드는 하나의 명령어로 실행되어야 한다.
--   **REQ-23**: 다크 모드를 지원하여 사용자 환경을 개선해야 한다.
+-   **REQ-23**: 프론트엔드와 Firebase 백엔드는 하나의 명령어로 실행되어야 한다.
+-   **REQ-24**: 다크 모드를 지원하여 사용자 환경을 개선해야 한다.
 
 ## 4. 비기능적 요구사항 (Non-Functional Requirements)
 -   **성능**: 메모 로딩과 검색은 사용자에게 즉각적인 반응을 보여야 한다.
