--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -39,7 +39,10 @@ graph LR
 ### 3.1 기술 스택
 -   **Platform**: Firebase
 -   **Database**: Cloud Firestore (NoSQL)
--   **Authentication**: Firebase Authentication (Session Persistence 적용)
+-   **Authentication**: Firebase Authentication
+    -   이메일/비밀번호 인증
+    -   Google OAuth 2.0 소셜 로그인
+    -   세션 지속성 옵션 (Local/Session Persistence)
 -   **Storage**: Firebase Cloud Storage (이미지 호스팅)
 
 ### 3.2 데이터 스키마 (Firestore Collection: `notes`)
