--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -95,3 +95,14 @@
     2. 선택 즉시 폼 또는 모달의 배경색이 변경되어 프리뷰 제공
     3. 저장 시 메모 데이터의 `color` 필드에 헥사코드(Hex code) 저장
 -   **Output**: 메모 카드의 배경이 선택한 색상으로 표시됨
+
+### F-12: 구글 소셜 로그인
+-   **Description**: 구글 계정을 사용하여 간편하게 로그인하는 기능
+-   **Input**: "Google로 로그인" 버튼 클릭
+-   **Process**:
+    1. Firebase Authentication의 Google Provider를 통해 팝업 창 표시
+    2. 사용자가 구글 계정 선택 및 인증
+    3. 인증 성공 시 사용자 정보를 Firestore에 저장 (신규 사용자인 경우)
+    4. 로그인 상태 유지 옵션에 따라 세션 지속성 설정
+-   **Output**: 로그인 완료 후 메인 화면으로 이동, 사용자 프로필 표시
+
