--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -36,7 +36,10 @@
 
 ### 3.1 Platform
 -   **Firebase**:
-    -   **Authentication**: 사용자 인증 및 세션 관리 (`browserSessionPersistence`)
+    -   **Authentication**: 사용자 인증 및 세션 관리
+        -   이메일/비밀번호 인증
+        -   Google OAuth 2.0 (소셜 로그인)
+        -   세션 지속성 옵션: `browserLocalPersistence` (로그인 유지) / `browserSessionPersistence` (브라우저 종료 시 로그아웃)
     -   **Cloud Firestore**: NoSQL 데이터베이스 및 실시간 동기화 (`onSnapshot`)
     -   **Storage**: 이미지 파일 저장
     -   **Hosting**: 정적 웹 호스팅 (예정)
