--- a/doc/5_테스트_계획서.md
+++ b/doc/5_테스트_계획서.md
@@ -35,6 +35,9 @@
 | TC-07 | 배경색 지정 | 메모 작성 중 | 물방울 아이콘 클릭 -> 색상 칩 선택 | 메모 작성 폼의 배경색이 즉시 변경됨 |
 | TC-08 | 배경색 수정 | 메모 수정 중 | 모달에서 물방울 아이콘 클릭 -> 색상 칩 선택 | 모달의 배경색이 즉시 변경되며 저장 시 반영됨 |
 | TC-09 | 실시간 공유 | 메모 공유됨 | 한쪽 기기에서 내용/색상 변경 | 다른 기기에서 새로고침 없이 즉시 내용/색상이 변경됨 |
+| TC-10 | 구글 로그인 | 로그인 페이지 접속 | "Google로 로그인" 버튼 클릭 -> 구글 계정 선택 | 로그인 성공 후 메인 화면으로 이동 |
+| TC-11 | 로그인 상태 유지 | 로그인 페이지 접속 | "로그인 상태 유지" 체크 -> 로그인 -> 브라우저 종료 후 재접속 | 로그인 상태가 유지되어 메인 화면이 바로 표시됨 |
+
 
 ## 5. 버그 리포팅
 -   발견된 버그는 우선순위(Critical, Major, Minor)를 지정하여 기록 및 수정.
