--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -5,10 +5,15 @@
 
 ## 1. 시작하기
 ## 1. 시작하기
-### 접속 방법
+
+### 회원가입 및 로그인
 1.  웹 브라우저(Chrome, Safari 등)를 엽니다.
 2.  **[https://advancekeep-1e051.web.app](https://advancekeep-1e051.web.app)** 주소로 접속합니다.
-3.  별도의 설치 없이 바로 이용 가능합니다.
+3.  다음 방법 중 하나로 로그인합니다:
+    -   **이메일/비밀번호**: 회원가입 후 이메일과 비밀번호로 로그인
+    -   **구글 계정**: "Google로 로그인" 버튼을 클릭하여 간편 로그인
+4.  **로그인 상태 유지** 체크박스를 선택하면 브라우저를 닫아도 로그인 상태가 유지됩니다.
+
 
 ## 2. 기본 사용법
 
