1. 라벨 추가/수정/삭제 기능 완료 2. 성능 최적화

--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -18,6 +18,7 @@ graph LR
 -   **Language**: JavaScript (ES6+)
 -   **State Management**: React Context API & Custom Hooks (Optimistic Updates 적용)
 -   **Routing**: React Router v7
+-   **Performance**: `React.lazy` (Code Splitting), `manualChunks` (Vendor Splitting)
 
 ### 2.2 디렉토리 구조
 프로젝트는 기능과 역할에 따라 다음과 같이 모듈화된 구조를 따릅니다.
@@ -57,6 +58,7 @@ graph LR
   "images": ["url1", "url2"],
   "image": "string (첫 번째 이미지 URL - 호환용)",
   "color": "string (Hex code, default: #ffffff)",
+  "labels": ["string (Label ID)"],
   "isPinned": boolean,
   "isArchived": boolean,
   "inTrash": boolean,
