--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -106,3 +106,22 @@
     4. 로그인 상태 유지 옵션에 따라 세션 지속성 설정
 -   **Output**: 로그인 완료 후 메인 화면으로 이동, 사용자 프로필 표시
 
+### F-13: 라벨 관리
+-   **Description**: 메모를 분류하기 위한 라벨을 생성, 수정, 삭제하는 기능
+-   **Input**: 사이드바의 "라벨 수정" 버튼 클릭
+-   **Process**:
+    1. 라벨 관리 모달 표시
+    2. (생성) 새 라벨 이름 입력 후 추가
+    3. (수정) 기존 라벨 이름 옆의 연필 아이콘 클릭하여 이름 변경
+    4. (삭제) 라벨 옆의 삭제 버튼 클릭 -> 해당 라벨 데이터 삭제 (메모와의 연결도 해제)
+-   **Output**: 사이드바에 라벨 목록 업데이트 및 라벨별 페이지 생성
+
+### F-14: 라벨 필터링
+-   **Description**: 특정 라벨이 부착된 메모만 모아서 보는 기능
+-   **Input**: 사이드바의 라벨 메뉴 클릭
+-   **Process**:
+    1. URL이 `/label/:labelId`로 변경
+    2. 해당 `labelId`를 포함하는 메모 필터링
+    3. **특이사항**: 라벨 보기에서는 보관된(Archived) 메모도 포함하여 표시 (휴지통 메모는 제외)
+-   **Output**: 선택한 라벨이 붙은 메모들만 그리드/리스트 뷰로 표시
+
