--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -11,6 +11,7 @@
 -   **React**: v18.3.1
     -   Component-Based Architecture
     -   Hooks (useState, useEffect, useContext, useReducer, custom hooks)
+    -   **Code Splitting**: `React.lazy` & `Suspense`를 활용한 라우트 기반 코드 분할
 -   **Vite**: v7.2.4
     -   빠른 HMR(Hot Module Replacement) 및 빌드 성능 제공
 
@@ -21,6 +22,7 @@
 
 ### 2.3 Styling & UI
 -   **Vanilla CSS**: 전역 스타일(`index.css`) 및 레이아웃 제어
+    -   **Font Optimization**: `optimizeLegibility`, `font-smoothing` 적용으로 렌더링 최적화
     -   **Flexbox**: 버튼 그룹 정렬 및 `action-tools` 구성 (`margin-right: auto`를 활용한 그룹 분리)
     -   **Grid**: 컬러 피커 팔레트 구현 (`grid-template-columns`)
 -   **React Icons**: v5.5.0 (Material Design 및 Feather 아이콘 사용)
@@ -51,3 +53,14 @@
 -   **ESLint**: v9.39.1
     -   JavaScript 코드 스타일 및 문법 오류 검사
     -   React Hooks 규칙 준수 확인
+
+## 5. 성능 최적화 (Performance Optimization)
+-   **Code Splitting (코드 분할)**:
+    -   `React.lazy`와 `Suspense`를 사용하여 페이지 단위로 JS 번들을 분할. 초기 로딩 시 필요한 리소스만 로드하여 TTI(Time To Interactive) 단축.
+-   **Chunk Splitting (청크 분할)**:
+    -   Vite 설정을 통해 `manualChunks` 적용. `vendor(React)`, `firebase`, `ui` 라이브러리를 별도 청크로 분리하여 캐싱 효율 증대.
+-   **Image Lazy Loading (이미지 지연 로딩)**:
+    -   `loading="lazy"` 속성을 사용하여 뷰포트 외의 이미지는 로딩을 지연시킴으로써 네트워크 대역폭 절약.
+-   **Rendering Optimization (렌더링 최적화)**:
+    -   `React.memo`: `NoteCard`, `Sidebar` 등 빈번하게 사용되거나 부모 리렌더링에 영향받는 컴포넌트 메모이제이션.
+    -   `useMemo` / `useCallback`: 필터링 로직 및 이벤트 핸들러 메모이제이션으로 불필요한 연산 방지.
