--- a/doc/5_테스트_계획서.md
+++ b/doc/5_테스트_계획서.md
@@ -37,6 +37,9 @@
 | TC-09 | 실시간 공유 | 메모 공유됨 | 한쪽 기기에서 내용/색상 변경 | 다른 기기에서 새로고침 없이 즉시 내용/색상이 변경됨 |
 | TC-10 | 구글 로그인 | 로그인 페이지 접속 | "Google로 로그인" 버튼 클릭 -> 구글 계정 선택 | 로그인 성공 후 메인 화면으로 이동 |
 | TC-11 | 로그인 상태 유지 | 로그인 페이지 접속 | "로그인 상태 유지" 체크 -> 로그인 -> 브라우저 종료 후 재접속 | 로그인 상태가 유지되어 메인 화면이 바로 표시됨 |
+| TC-12 | 라벨 생성/관리 | 사이드바 메뉴 | "라벨 수정" 클릭 -> 새 라벨 입력 | 새로운 라벨이 사이드바에 추가됨 |
+| TC-13 | 라벨 필터링 | 라벨 및 메모 존재 | 사이드바의 라벨 클릭 | 해당 라벨이 포함된 메모만 필터링되어 보임 (보관된 메모 포함) |
+| TC-14 | 성능 점수 | Chrome DevTools | Lighthouse 탭 -> 분석 실행 | Performance 점수가 80점 이상 기록됨 |
 
 
 ## 5. 버그 리포팅
