--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -32,6 +32,11 @@
 2.  나타나는 색상 팔레트에서 원하는 배경색을 선택합니다.
 3.  선택한 색상이 즉시 메모에 적용됩니다.
 
+### 라벨로 관리하기
+1.  **라벨 생성**: 사이드바 하단의 **"라벨 수정"**을 클릭하여 새 라벨을 만들 수 있습니다.
+2.  **라벨 추가**: 메모 작성/수정 시 하단의 **더보기(:)** 메뉴에서 **"라벨 추가"**를 선택하여 메모에 라벨을 붙일 수 있습니다.
+3.  **라벨 필터링**: 사이드바에서 원하는 라벨 이름을 클릭하면 해당 라벨이 붙은 메모만 모아볼 수 있습니다.
+
 ### 메모 수정하기
 1.  수정하고 싶은 메모 카드를 클릭합니다.
 2.  내용을 수정합니다.
