--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -44,12 +44,19 @@
 -   **REQ-21**: 사용자는 "로그인 상태 유지" 옵션을 선택하여 브라우저 종료 후에도 로그인 상태를 유지할 수 있어야 한다.
 -   **REQ-22**: 메모 데이터(추가, 수정, 삭제, 공유 등)는 `onSnapshot`을 통해 모든 로그인 세션에서 실시간으로 동기화되어야 한다.
 
+### 3.6 라벨 관리
+-   **REQ-25**: 사용자는 라벨을 생성, 수정, 삭제하고 메모에 라벨을 부착할 수 있어야 한다.
+-   **REQ-26**: 사용자는 특정 라벨이 부착된 메모만 필터링하여 볼 수 있어야 한다.
+
 ### 3.7 시스템 및 설정
 -   **REQ-23**: 프론트엔드와 Firebase 백엔드는 하나의 명령어로 실행되어야 한다.
 -   **REQ-24**: 다크 모드를 지원하여 사용자 환경을 개선해야 한다.
 
 ## 4. 비기능적 요구사항 (Non-Functional Requirements)
--   **성능**: 메모 로딩과 검색은 사용자에게 즉각적인 반응을 보여야 한다.
+-   **성능**: 
+    -   메모 로딩과 검색은 사용자에게 즉각적인 반응을 보여야 한다.
+    -   초기 로딩 속도를 최적화하기 위해 코드 분할(Code Splitting)과 이미지 지연 로딩(Lazy Loading)을 적용한다.
+    -   Lighthouse 성능 점수 80점 이상을 목표로 한다.
 -   **사용성**: UI는 직관적이어야 하며, Google Keep과 유사한 사용자 경험을 제공해야 한다.
 -   **호환성**: Chrome, Edge, Firefox 등 최신 웹 브라우저에서 정상 동작해야 한다.
 -   **유지보수성**: 코드는 모듈화되어 있어야 하며, 문서화가 잘 되어 있어야 한다.
