할일 목록 메뉴 추가 및 코드 점검

--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -33,6 +33,7 @@ graph LR
 -   **NoteForm**: 메모 작성 폼. 커스텀 컬러 피커를 포함하며 이미지 업로드 및 배경색 지정을 담당.
 -   **NoteCard**: 개별 메모 표시. 배경색(`color`) 필드에 따른 동적 스타일링 적용.
 -   **EditNoteModal**: 메모 수정 모달. 실시간 배경색 프리뷰 및 데이터 업데이트 처리.
+-   **ChecklistInputItem**: 체크리스트 항목의 입력, 삭제, 완료 처리를 담당하는 재사용 가능한 컴포넌트.
 -   **Layout**: 사이드바, 헤더 등 공통 레이아웃 요소 관리.
 
 ## 3. 백엔드 설계 (Backend - Serverless)
@@ -54,7 +55,9 @@ graph LR
   "userId": "string (구 소유자 ID)",
   "ownerId": "string (명시적 소유자 ID)",
   "title": "string",
-  "text": "string (Markdown/RichText)",
+  "type": "string ('text' | 'checklist')",
+  "text": "string (Markdown/RichText - type이 text일 때)",
+  "items": [{ "id": "string", "text": "string", "checked": boolean }],
   "images": ["url1", "url2"],
   "image": "string (첫 번째 이미지 URL - 호환용)",
   "color": "string (Hex code, default: #ffffff)",
