--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -34,6 +34,13 @@
 ### 2.4 Utils
 -   **UUID**: v13.0.0 (고유 ID 생성)
 
+### 2.5 Component Architecture & Refactoring
+-   **Reusable Components**: 반복되는 UI 로직을 공통 컴포넌트로 분리
+    -   `ChecklistInputItem`: 체크리스트 항목 입력/렌더링 로직 통합 (NoteForm, EditNoteModal 공통 사용)
+    -   `ColorPicker`: 색상 선택 UI 및 `KEEP_COLORS` 상수 데이터 통합 관리 (src/constants/index.js)
+-   **Directory Structure**:
+    -   `src/constants`: 전역 상수 관리 (e.g., 색상 팔레트, 메뉴 아이템)
+
 ## 3. 백엔드 및 데이터베이스 (Serverless)
 
 ### 3.1 Platform
