--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -22,6 +22,12 @@
 2.  **제목**과 **내용**을 입력합니다.
 3.  작성이 완료되면 **닫기** 버튼을 누르거나 입력창 바깥 빈 공간을 클릭하면 자동 저장됩니다.
 
+### 체크리스트 만들기
+1.  **할 일 목록** 메뉴를 선택하거나 메모 작성 시 체크리스트 모드를 사용합니다.
+2.  항목을 입력하고 **Enter**를 누르면 다음 항목이 자동으로 생성됩니다.
+3.  항목을 삭제하려면 **Backspace**를 누르거나 우측의 **X 버튼**을 클릭합니다.
+4.  할 일을 완료하면 체크박스를 클릭하세요. **완료된 항목**은 목록 하단으로 이동하고 취소선이 그어집니다.
+
 ### 이미지 추가하기
 1.  메모 작성 중 또는 수정 중에 하단의 **이미지(🖼️) 아이콘**을 클릭합니다.
 2.  컴퓨터에서 원하는 이미지 파일을 선택합니다.
