--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -52,6 +52,10 @@
 -   **REQ-23**: 프론트엔드와 Firebase 백엔드는 하나의 명령어로 실행되어야 한다.
 -   **REQ-24**: 다크 모드를 지원하여 사용자 환경을 개선해야 한다.
 
+### 3.8 체크리스트 관리
+-   **REQ-27**: 사용자는 체크리스트 형태의 메모를 작성할 수 있어야 한다.
+-   **REQ-28**: 체크리스트 항목을 추가, 수정, 삭제할 수 있어야 하며 완료된 항목은 시각적으로 구분되어야 한다.
+
 ## 4. 비기능적 요구사항 (Non-Functional Requirements)
 -   **성능**: 
     -   메모 로딩과 검색은 사용자에게 즉각적인 반응을 보여야 한다.
