--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -125,3 +125,12 @@
     3. **특이사항**: 라벨 보기에서는 보관된(Archived) 메모도 포함하여 표시 (휴지통 메모는 제외)
 -   **Output**: 선택한 라벨이 붙은 메모들만 그리드/리스트 뷰로 표시
 
+
+### F-15: 체크리스트 관리
+-   **Description**: 할 일 목록(체크리스트)을 작성하고 관리하는 기능
+-   **Input**: 체크리스트 아이템 텍스트, 체크박스 선택
+-   **Process**:
+    1.  모드 전환 또는 할 일 목록 페이지에서 체크리스트 모드 진입
+    2.  항목 추가 (Enter 키), 삭제 (Backspace 또는 삭제 버튼)
+    3.  체크박스 선택 시 '완료된 항목'으로 시각적 분리 및 하단 이동
+-   **Output**: 완료/미완료 항목이 구분된 체크리스트 카드 표시
