--- a/doc/5_테스트_계획서.md
+++ b/doc/5_테스트_계획서.md
@@ -40,6 +40,8 @@
 | TC-12 | 라벨 생성/관리 | 사이드바 메뉴 | "라벨 수정" 클릭 -> 새 라벨 입력 | 새로운 라벨이 사이드바에 추가됨 |
 | TC-13 | 라벨 필터링 | 라벨 및 메모 존재 | 사이드바의 라벨 클릭 | 해당 라벨이 포함된 메모만 필터링되어 보임 (보관된 메모 포함) |
 | TC-14 | 성능 점수 | Chrome DevTools | Lighthouse 탭 -> 분석 실행 | Performance 점수가 80점 이상 기록됨 |
+| TC-15 | 체크리스트 생성 | 메모 작성 중 | 할 일 목록 모드 변경 -> 항목 입력 후 Enter | 새로운 체크리스트 항목이 추가됨 |
+| TC-16 | 체크리스트 완료 | 체크리스트 존재 | 항목 체크박스 선택 | 해당 항목이 하단 완료 섹션으로 이동하고 취소선 처리됨 |
 
 
 ## 5. 버그 리포팅
