로컬 저장 기능 추가

--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -56,6 +56,9 @@
 -   **REQ-27**: 사용자는 체크리스트 형태의 메모를 작성할 수 있어야 한다.
 -   **REQ-28**: 체크리스트 항목을 추가, 수정, 삭제할 수 있어야 하며 완료된 항목은 시각적으로 구분되어야 한다.
 
+### 3.9 데이터 안정성
+-   **REQ-29**: 사용자는 언제든지 자신의 데이터를 로컬 파일(.db)로 백업하고, 이를 통해 데이터를 복원할 수 있어야 한다.
+
 ## 4. 비기능적 요구사항 (Non-Functional Requirements)
 -   **성능**: 
     -   메모 로딩과 검색은 사용자에게 즉각적인 반응을 보여야 한다.
