--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -135,4 +135,21 @@
     1.  모드 전환 또는 할 일 목록 페이지에서 체크리스트 모드 진입
     2.  항목 추가 (Enter 키), 삭제 (Backspace 또는 삭제 버튼)
     3.  체크박스 선택 시 '완료된 항목'으로 시각적 분리 및 하단 이동
--   **Output**: 완료/미완료 항목이 구분된 체크리스트 카드 표시
+
+### F-16: 로컬 데이터 백업 및 복구
+-   **Description**: 사용자의 모든 메모와 라벨 데이터를 로컬 파일로 백업하고, 필요 시 복구하는 기능
+-   **Input**: 헤더의 구름 아이콘 메뉴 > "내 컴퓨터에 백업" 또는 "내 컴퓨터에서 복구"
+-   **Process**:
+    -   **백업 (Export)**:
+        1.  사용자 ID에 연결된 모든 메모(휴지통/보관함 포함)와 라벨 데이터 조회
+        2.  JSON 형식으로 데이터 직렬화
+        3.  `advancekeep_YYYYMMDD_HHMMSS.db` 파일명으로 로컬 다운로드
+        4.  (지원 브라우저의 경우) '다른 이름으로 저장' 대화상자 표시
+    -   **복구 (Import)**:
+        1.  사용자가 `.db` 백업 파일 선택
+        2.  파일 내용 파싱 및 유효성 검증
+        3.  데이터 복구 전 기존 데이터 삭제 및 덮어쓰기 경고 (사용자 확인)
+        4.  Firestore 배치 처리(Batch)를 통해 대용량 데이터 안전하게 복원 (청크 분할)
+-   **Output**: 
+    -   백업 시: 로컬 스토리지에 `.db` 파일 생성
+    -   복구 시: 앱 데이터가 백업 시점의 상태로 완전히 동기화됨
