--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -55,6 +55,17 @@
 
 ### 3.2 SDK
 -   **firebase**: v10.x.x
+-   **Window File System Access API**:
+    -   `showSaveFilePicker`: 모던 브라우저에서 백업 파일 저장 시 '다른 이름으로 저장' 다이얼로그 및 취소 감지 지원.
+    -   Fallback: Legacy `<a download>` 방식으로 구형 브라우저 지원.
+
+### 3.3 Data Backup & Restore Logic
+-   **Batch Chunking (청크 분할)**:
+    -   Firestore `writeBatch`의 500개 작업 제한을 준수하기 위해 대량의 데이터 복구 시 450개 단위로 트랜잭션을 분할 처리.
+    -   `backupService.js` 내 `processBatchChunks` 함수에서 구현.
+-   **Security**:
+    -   서버나 클라우드 스토리지(Google Drive 등)를 거치지 않고, 로컬 스토리지와 직접 통신하여 데이터 프라이버시 강화.
+    -   백업 데이터는 순수 JSON 텍스트 포맷(`.db`)으로 사용자가 직접 관리 가능.
 
 ## 4. 코드 품질 관리
 -   **ESLint**: v9.39.1
