--- a/doc/5_테스트_계획서.md
+++ b/doc/5_테스트_계획서.md
@@ -42,6 +42,8 @@
 | TC-14 | 성능 점수 | Chrome DevTools | Lighthouse 탭 -> 분석 실행 | Performance 점수가 80점 이상 기록됨 |
 | TC-15 | 체크리스트 생성 | 메모 작성 중 | 할 일 목록 모드 변경 -> 항목 입력 후 Enter | 새로운 체크리스트 항목이 추가됨 |
 | TC-16 | 체크리스트 완료 | 체크리스트 존재 | 항목 체크박스 선택 | 해당 항목이 하단 완료 섹션으로 이동하고 취소선 처리됨 |
+| TC-17 | 로컬 백업 | 메모 데이터 존재 | 헤더 구름 아이콘 클릭 -> '내 컴퓨터에 백업' -> 저장 | 로컬 드라이브에 `advancekeep_Date_Time.db` 파일이 생성됨 |
+| TC-18 | 로컬 복구 | 백업 파일(.db) 보유 | 헤더 구름 아이콘 클릭 -> '내 컴퓨터에서 복구' -> 파일 선택 -> 확인 | 기존 데이터가 삭제되고 백업 파일의 데이터로 앱이 새로고침됨 |
 
 
 ## 5. 버그 리포팅
