--- a/doc/2_시스템_설계서.md
+++ b/doc/2_시스템_설계서.md
@@ -26,7 +26,7 @@ graph LR
 -   `src/components`: UI 컴포넌트 (Common, Features, Layout)
 -   `src/pages`: 라우트별 페이지 (Home, Archive, Trash)
 -   `src/hooks`: 비지니스 로직 및 상태 관리 (useNotes, useAuth 등)
--   `src/services`: API 및 Firebase 통신 계층 (api.js, auth.js)
+-   `src/services`: API 및 Firebase 통신 계층 (api.js, auth.js, backupService.js)
 -   `src/utils`: 공통 유틸리티 함수 및 헬퍼
 
 ### 2.3 주요 컴포넌트 설계
@@ -34,7 +34,8 @@ graph LR
 -   **NoteCard**: 개별 메모 표시. 배경색(`color`) 필드에 따른 동적 스타일링 적용.
 -   **EditNoteModal**: 메모 수정 모달. 실시간 배경색 프리뷰 및 데이터 업데이트 처리.
 -   **ChecklistInputItem**: 체크리스트 항목의 입력, 삭제, 완료 처리를 담당하는 재사용 가능한 컴포넌트.
--   **Layout**: 사이드바, 헤더 등 공통 레이아웃 요소 관리.
+-   **Layout**: 사이드바, 헤더 등 공통 레이아웃 요소 관리 (`CloudMenu` 포함).
+-   **Backup/RestoreModal**: 로컬 파일 백업 및 복구를 위한 모달 UI.
 
 ## 3. 백엔드 설계 (Backend - Serverless)
 
