--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -64,3 +64,19 @@
 -   **Notes**: 모든 활성 메모를 보여줍니다.
 -   **Archive (보관함)**: 보관된 메모들을 확인합니다.
 -   **Trash (휴지통)**: 삭제된 메모들을 확인하고 복구하거나 영구 삭제할 수 있습니다.
+
+### 데이터 백업 및 복구
+소중한 메모 데이터를 내 컴퓨터에 파일로 저장하고, 언제든지 복구할 수 있습니다.
+
+**1. 내 컴퓨터에 백업하기**
+1.  헤더 오른쪽의 **구름(☁️/동기화) 아이콘**을 클릭합니다.
+2.  **"내 컴퓨터에 백업"**을 클릭합니다.
+3.  '다른 이름으로 저장' 창이 뜨면 저장할 위치를 선택하고 **저장**을 누릅니다.
+4.  `advancekeep_YYYYMMDD_HHMMSS.db` 형식의 파일이 저장됩니다.
+
+**2. 내 컴퓨터에서 복구하기**
+1.  헤더 오른쪽의 **구름(☁️/동기화) 아이콘**을 클릭합니다.
+2.  **"내 컴퓨터에서 복구"**를 클릭합니다.
+3.  **파일 선택**을 눌러 이전에 백업해둔 `.db` 파일을 선택합니다.
+4.  경고 메시지(모든 데이터 초기화)를 확인하고 **복구 실행**을 누릅니다.
+5.  복구가 완료되면 앱이 자동으로 새로고침됩니다.
