모바일에서 에러. .db에서 .json 확장자로 변경

--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -65,7 +65,7 @@
     -   `backupService.js` 내 `processBatchChunks` 함수에서 구현.
 -   **Security**:
     -   서버나 클라우드 스토리지(Google Drive 등)를 거치지 않고, 로컬 스토리지와 직접 통신하여 데이터 프라이버시 강화.
-    -   백업 데이터는 순수 JSON 텍스트 포맷(`.db`)으로 사용자가 직접 관리 가능.
+    -   백업 데이터는 순수 JSON 텍스트 포맷(`.json`)으로 사용자가 직접 관리 가능.
 
 ## 4. 코드 품질 관리
 -   **ESLint**: v9.39.1
