--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -143,13 +143,13 @@
     -   **백업 (Export)**:
         1.  사용자 ID에 연결된 모든 메모(휴지통/보관함 포함)와 라벨 데이터 조회
         2.  JSON 형식으로 데이터 직렬화
-        3.  `advancekeep_YYYYMMDD_HHMMSS.db` 파일명으로 로컬 다운로드
+        3.  `advancekeep_YYYYMMDD_HHMMSS.json` 파일명으로 로컬 다운로드
         4.  (지원 브라우저의 경우) '다른 이름으로 저장' 대화상자 표시
     -   **복구 (Import)**:
-        1.  사용자가 `.db` 백업 파일 선택
+        1.  사용자가 `.json` 백업 파일 선택
         2.  파일 내용 파싱 및 유효성 검증
         3.  데이터 복구 전 기존 데이터 삭제 및 덮어쓰기 경고 (사용자 확인)
         4.  Firestore 배치 처리(Batch)를 통해 대용량 데이터 안전하게 복원 (청크 분할)
 -   **Output**: 
-    -   백업 시: 로컬 스토리지에 `.db` 파일 생성
+    -   백업 시: 로컬 스토리지에 `.json` 파일 생성
     -   복구 시: 앱 데이터가 백업 시점의 상태로 완전히 동기화됨
