모바일 LightHouse 결과 점검 및 성능과 권장사항 개선

--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -67,6 +67,16 @@
     -   서버나 클라우드 스토리지(Google Drive 등)를 거치지 않고, 로컬 스토리지와 직접 통신하여 데이터 프라이버시 강화.
     -   백업 데이터는 순수 JSON 텍스트 포맷(`.json`)으로 사용자가 직접 관리 가능.
 
+### 3.4 Performance & SEO
+-   **Caching Strategy**:
+    -   `firebase.json`을 통해 정적 자산(JS/CSS/Image)에 `Cache-Control: public, max-age=31536000, immutable` 헤더 적용.
+    -   HTML 및 Service Worker는 `no-cache`로 설정하여 배포 즉시 업데이트 반영 보장.
+-   **Bundling Optimization**:
+    -   `vite.config.js`에서 `react-icons` 등 대형 라이브러리의 불필요한 번들링을 방지하고 Tree Shaking 효율화.
+-   **SEO & Web Standards**:
+    -   `robots.txt` 설정: 모든 크롤러 접근 허용(`Allow: /`).
+    -   `index.html`: Meta Description, Keywords, Open Graph(OG) 태그 적용으로 검색 및 공유 최적화.
+
 ## 4. 코드 품질 관리
 -   **ESLint**: v9.39.1
     -   JavaScript 코드 스타일 및 문법 오류 검사
