--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -63,7 +63,11 @@
 -   **성능**: 
     -   메모 로딩과 검색은 사용자에게 즉각적인 반응을 보여야 한다.
     -   초기 로딩 속도를 최적화하기 위해 코드 분할(Code Splitting)과 이미지 지연 로딩(Lazy Loading)을 적용한다.
+    -   정적 자산(이미지, JS, CSS)에 대해 효율적인 캐싱 정책(Cache-Control)을 적용하여 재방문 시 로딩 속도를 극대화한다.
     -   Lighthouse 성능 점수 80점 이상을 목표로 한다.
+-   **SEO 및 웹 표준**:
+    -   검색 엔진 최적화(SEO)를 위해 적절한 메타 태그(Description, Keywords)와 `robots.txt`를 설정해야 한다.
+    -   소셜 미디어 공유 시 올바른 미리보기(Open Graph)가 제공되어야 한다.
 -   **사용성**: UI는 직관적이어야 하며, Google Keep과 유사한 사용자 경험을 제공해야 한다.
 -   **호환성**: Chrome, Edge, Firefox 등 최신 웹 브라우저에서 정상 동작해야 한다.
 -   **유지보수성**: 코드는 모듈화되어 있어야 하며, 문서화가 잘 되어 있어야 한다.
