--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -57,7 +57,10 @@
 -   **firebase**: v10.x.x
 -   **Window File System Access API**:
     -   `showSaveFilePicker`: 모던 브라우저에서 백업 파일 저장 시 '다른 이름으로 저장' 다이얼로그 및 취소 감지 지원.
-    -   Fallback: Legacy `<a download>` 방식으로 구형 브라우저 지원.
+    -   **Mobile Fallback (Data URI)**: 
+        -   파일 시스템 API가 제한된 모바일 브라우저(Samsung Internet 등) 환경 지원.
+        -   Blob URL의 Lifecycle 문제(0바이트 저장) 해결을 위해 `data:` URI 스킴을 사용하여 파일 내용을 직접 링크에 임베딩.
+        -   `createWritable` 오류 감지 시 자동으로 이 방식으로 전환(Fallback).
 
 ### 3.3 Data Backup & Restore Logic
 -   **Batch Chunking (청크 분할)**:
@@ -66,6 +69,15 @@
 -   **Security**:
     -   서버나 클라우드 스토리지(Google Drive 등)를 거치지 않고, 로컬 스토리지와 직접 통신하여 데이터 프라이버시 강화.
     -   백업 데이터는 순수 JSON 텍스트 포맷(`.json`)으로 사용자가 직접 관리 가능.
+
+### 3.4 UX Improvement Logic
+-   **Optimistic Updates (낙관적 업데이트)**:
+    -   메모 수정, 상태 변경(고정/삭제 등) 시 서버 응답을 기다리지 않고 UI를 즉시 업데이트하여 반응성 향상.
+    -   `EditNoteModal`: `await` 제거를 통해 저장 버튼 클릭 시 즉시 모달 닫힘 처리.
+    -   에러 처리: 백그라운드 동기화 실패 시 전역 에러 핸들러(`Swal`)를 통해 사용자에게 알림 및 상태 롤백(필요시).
+-   **SEO Configuration**:
+    -   `robots.txt`: 크롤링 허용 규칙 정의.
+    -   `index.html`: `meta` 태그 및 Open Graph 프로토콜 적용으로 소셜 미디어 공유 최적화.
 
 ## 4. 코드 품질 관리
 -   **ESLint**: v9.39.1
