--- a/doc/5_테스트_계획서.md
+++ b/doc/5_테스트_계획서.md
@@ -44,6 +44,8 @@
 | TC-16 | 체크리스트 완료 | 체크리스트 존재 | 항목 체크박스 선택 | 해당 항목이 하단 완료 섹션으로 이동하고 취소선 처리됨 |
 | TC-17 | 로컬 백업 | 메모 데이터 존재 | 헤더 구름 아이콘 클릭 -> '내 컴퓨터에 백업' -> 저장 | 로컬 드라이브에 `advancekeep_Date_Time.json` 파일이 생성됨 |
 | TC-18 | 로컬 복구 | 백업 파일(.json) 보유 | 헤더 구름 아이콘 클릭 -> '내 컴퓨터에서 복구' -> 파일 선택 -> 확인 | 기존 데이터가 삭제되고 백업 파일의 데이터로 앱이 새로고침됨 |
+| TC-19 | 자동 삭제 | 30일 경과 메모 DB 존재 | 앱 실행 (새로고침) 및 휴지통 확인 | 30일이 지난 메모가 목록에서 사라지고 DB에서 삭제됨 |
+| TC-20 | SEO 메타태그 | 앱 실행 중 | 브라우저 개발자 도구 -> `<head>` 태그 확인 | Title, Description, OG 태그가 정상적으로 포함되어 있음 |
 
 
 ## 5. 버그 리포팅
