--- a/doc/1_요구사항_명세서.md
+++ b/doc/1_요구사항_명세서.md
@@ -58,6 +58,8 @@
 
 ### 3.9 데이터 안정성
 -   **REQ-29**: 사용자는 언제든지 자신의 데이터를 로컬 파일(.json)로 백업하고, 이를 통해 데이터를 복원할 수 있어야 한다.
+-   **REQ-30**: 30일이 지난 휴지통의 메모는 자동으로 영구 삭제되어야 한다.
+-   **REQ-31**: 웹 표준 준수(SEO) 및 소셜 미디어 공유 최적화를 위한 메타 태그가 적용되어야 한다.
 
 ## 4. 비기능적 요구사항 (Non-Functional Requirements)
 -   **성능**: 
