--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -153,3 +153,19 @@
 -   **Output**: 
     -   백업 시: 로컬 스토리지에 `.json` 파일 생성
     -   복구 시: 앱 데이터가 백업 시점의 상태로 완전히 동기화됨
+
+### F-17: 휴지통 자동 비우기
+-   **Description**: 휴지통에 보관된지 오래된 메모를 자동으로 영구 삭제하는 기능
+-   **Input**: 없음 (자동 실행)
+-   **Process**:
+    1.  메모 삭제(휴지통 이동) 시 `deletedAt` 타임스탬프 기록
+    2.  복구 시 `deletedAt` 초기화
+    3.  앱 구동 시 30일이 경과한 메모를 감지하여 영구 삭제
+-   **Output**: 30일이 지난 메모 영구 제거 및 저장 공간 확보
+
+### F-18: 검색 엔진 최적화 (SEO)
+-   **Description**: 검색 엔진 노출 및 소셜 미디어 공유 최적화
+-   **Process**:
+    1.  `robots.txt`: 모든 크롤러 접근 허용 (`Allow: /`)
+    2.  `meta tags`: 제목, 설명, 키워드, Open Graph(공유 미리보기) 태그 적용
+-   **Output**: 링크 공유 시 미리보기 카드 표시, 검색 엔진 수집 허용
