--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -51,6 +51,7 @@
 1.  삭제할 메모 카드 하단의 **더보기(:)** 메뉴를 클릭합니다.
 2.  **"메모 삭제"**를 선택합니다.
 3.  메모가 **휴지통**으로 이동합니다. (완전히 삭제되지 않습니다)
+4.  **주의**: 휴지통에 보관된 메모는 **30일 후 자동으로 영구 삭제**됩니다.
 
 ## 3. 고급 기능
 
@@ -73,6 +74,7 @@
 2.  **"내 컴퓨터에 백업"**을 클릭합니다.
 3.  '다른 이름으로 저장' 창이 뜨면 저장할 위치를 선택하고 **저장**을 누릅니다.
 4.  `advancekeep_YYYYMMDD_HHMMSS.json` 형식의 파일이 저장됩니다.
+    *   **모바일(삼성 인터넷 등)**에서는 다운로드 링크 클릭 시 자동으로 저장되지 않는 경우, **"링크 저장"** 또는 **"공유 > 파일에 저장"**을 이용해야 할 수 있습니다.
 
 **2. 내 컴퓨터에서 복구하기**
 1.  헤더 오른쪽의 **구름(☁️/동기화) 아이콘**을 클릭합니다.
