--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -124,7 +124,7 @@
 -   **Process**:
     1. URL이 `/label/:labelId`로 변경
     2. 해당 `labelId`를 포함하는 메모 필터링
-    3. **특이사항**: 라벨 보기에서는 보관된(Archived) 메모도 포함하여 표시 (휴지통 메모는 제외)
+    3. **특이사항**: 라벨 보기에서도 보관된(Archived) 메모는 표시하지 않음 (활성 메모만 표시)
 -   **Output**: 선택한 라벨이 붙은 메모들만 그리드/리스트 뷰로 표시
 
 
