모바일 앱 생성 (Android, iOS)

--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -169,3 +169,11 @@
     1.  `robots.txt`: 모든 크롤러 접근 허용 (`Allow: /`)
     2.  `meta tags`: 제목, 설명, 키워드, Open Graph(공유 미리보기) 태그 적용
 -   **Output**: 링크 공유 시 미리보기 카드 표시, 검색 엔진 수집 허용
+
+### F-19: 모바일 앱 지원 (Android/iOS)
+-   **Description**: 웹 애플리케이션을 네이티브 모바일 앱(Android, iOS)으로 패키징하여 배포 및 실행하는 기능
+-   **Process**:
+    1.  Capacitor 런타임이 웹뷰(WebView) 내에서 리액트 앱 실행
+    2.  네이티브 브릿지를 통해 디바이스 기능(카메라, 파일 시스템 등) 접근 (필요 시)
+-   **Output**: Android APK/AAB 및 iOS IPA 파일 생성 가능
+
