--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -62,7 +62,13 @@
         -   Blob URL의 Lifecycle 문제(0바이트 저장) 해결을 위해 `data:` URI 스킴을 사용하여 파일 내용을 직접 링크에 임베딩.
         -   `createWritable` 오류 감지 시 자동으로 이 방식으로 전환(Fallback).
 
-### 3.3 Data Backup & Restore Logic
+### 3.3 Mobile Application (Native Container)
+-   **Capacitor**: v7.0.0
+    -   **Cross-Platform**: 단일 웹 코드베이스로 Android 및 iOS 네이티브 앱 생성.
+    -   **Web Native Bridge**: 웹 앱을 네이티브 웹뷰에서 실행하며, 필요 시 네이티브 기능 호출.
+    -   **Configuration**: `capacitor.config.ts` 및 `android/`, `ios/` 네이티브 프로젝트 폴더 관리.
+
+### 3.4 Data Backup & Restore Logic
 -   **Batch Chunking (청크 분할)**:
     -   Firestore `writeBatch`의 500개 작업 제한을 준수하기 위해 대량의 데이터 복구 시 450개 단위로 트랜잭션을 분할 처리.
     -   `backupService.js` 내 `processBatchChunks` 함수에서 구현.
@@ -70,7 +76,7 @@
     -   서버나 클라우드 스토리지(Google Drive 등)를 거치지 않고, 로컬 스토리지와 직접 통신하여 데이터 프라이버시 강화.
     -   백업 데이터는 순수 JSON 텍스트 포맷(`.json`)으로 사용자가 직접 관리 가능.
 
-### 3.4 UX Improvement Logic
+### 3.5 UX Improvement Logic
 -   **Optimistic Updates (낙관적 업데이트)**:
     -   메모 수정, 상태 변경(고정/삭제 등) 시 서버 응답을 기다리지 않고 UI를 즉시 업데이트하여 반응성 향상.
     -   `EditNoteModal`: `await` 제거를 통해 저장 버튼 클릭 시 즉시 모달 닫힘 처리.
