앱 문제해결 및 배포 1. [안드로이드] 구글로 로그인 기능 분기 (COOP 이슈) 2. [안드로이드] 내 컴퓨터에 백업 기능 분기 (브라우저와 상이)

--- a/doc/4_기술_명세서.md
+++ b/doc/4_기술_명세서.md
@@ -61,12 +61,20 @@
         -   파일 시스템 API가 제한된 모바일 브라우저(Samsung Internet 등) 환경 지원.
         -   Blob URL의 Lifecycle 문제(0바이트 저장) 해결을 위해 `data:` URI 스킴을 사용하여 파일 내용을 직접 링크에 임베딩.
         -   `createWritable` 오류 감지 시 자동으로 이 방식으로 전환(Fallback).
+    -   **Native File Export**:
+        -   **Tech**: `@capacitor/filesystem`, `@capacitor/share`
+        -   **Flow**: JSON 파일 생성(Cache Directory) -> `Share.share()` 호출 -> OS 네이티브 공유 시트 표시.
+        -   **Benefit**: 안드로이드 10+ 범위 지정 저장소(Scoped Storage) 문제 해결 및 직관적인 UX.
 
 ### 3.3 Mobile Application (Native Container)
 -   **Capacitor**: v7.0.0
     -   **Cross-Platform**: 단일 웹 코드베이스로 Android 및 iOS 네이티브 앱 생성.
     -   **Web Native Bridge**: 웹 앱을 네이티브 웹뷰에서 실행하며, 필요 시 네이티브 기능 호출.
     -   **Configuration**: `capacitor.config.ts` 및 `android/`, `ios/` 네이티브 프로젝트 폴더 관리.
+    -   **Plugins**:
+        -   `@codetrix-studio/capacitor-google-auth`: 네이티브 구글 로그인 지원 (웹 팝업 차단 문제 해결).
+        -   `@capacitor/share`: 파일 공유 및 백업 저장.
+        -   `@capacitor/filesystem`: 로컬 파일 임시 생성.
 
 ### 3.4 Data Backup & Restore Logic
 -   **Batch Chunking (청크 분할)**:
