--- a/doc/7_모바일_앱_가이드.md
+++ b/doc/7_모바일_앱_가이드.md
@@ -1,56 +1,58 @@
 # 모바일 앱 (Android/iOS) 가이드
 
-이 문서는 AdvanceKeep 웹 애플리케이션을 **Capacitor**를 사용하여 네이티브 모바일 앱으로 빌드하고 실행하는 방법을 설명합니다.
+이 문서는 AdvanceKeep 웹 애플리케이션을 **Capacitor**를 사용하여 네이티브 모바일 앱으로 빌드, 배포 및 문제 해결하는 방법을 상세히 설명.
 
 ## 1. 개요
-*   **Capacitor**는 웹 앱의 코드를 그대로 사용하여 네이티브 안드로이드 및 iOS 앱을 생성할 수 있게 해주는 크로스 플랫폼 런타임입니다.
-*   웹 코드는 `dist` 폴더에 빌드되며, Capacitor가 이를 네이티브 프로젝트(`android`, `ios`) 내의 웹뷰(WebView)로 복사하여 앱을 구동합니다.
+*   **Capacitor**로 웹 앱의 코드를 그대로 사용하여 네이티브 안드로이드 및 iOS 앱 생성.
+*   **주요 기능**:
+    *   **네이티브 구글 로그인**: `@codetrix-studio/capacitor-google-auth` 플러그인 사용.
+    *   **파일 공유/백업**: `@capacitor/share`를 통한 네이티브 공유 시트 호출.
+    *   **자동 아이콘 생성**: `@capacitor/assets`를 통한 리소스 자동화.
 
-## 2. 사전 준비 사항
-*   **Node.js**: 최신 LTS 버전
-*   **Android Studio**: 안드로이드 앱 빌드 및 에뮬레이터 실행용 (Windows/Mac)
-*   **Xcode**: iOS 앱 빌드 및 시뮬레이터 실행용 (**Mac 필수**)
-    *   *주의: Windows 환경에서는 iOS 프로젝트 폴더(`.ios`) 생성까지만 가능하며, 실제 빌드는 불가능합니다.*
+## 2. 필수 설정 (구글 로그인)
 
-## 3. 앱 실행 방법
+1.  **Firebase 콘솔 설정**:
+    *   프로젝트 설정 > 내 앱 (Android)에서 **SHA-1 디지털 지문** 등록.
+    *   **주의**: 개발용(Debug) 키와 배포용(Release) 키의 SHA-1을 **모두** 등록.
+2.  **google-services.json**: `android/app/` 폴더 내 위치.
+3.  **capacitor.config.ts**: `serverClientId` (웹 클라이언트 ID) 설정 확인.
 
-### 3.1 안드로이드 (Android)
-1.  **웹 앱 빌드**:
+## 3. 앱 아이콘 및 스플래시 변경
+앱 아이콘을 변경하려면 다음 과정을 시행.
+
+1.  **원본 준비**: `assets/logo.svg` (또는 png) 파일을 준비.
+2.  **명령어 실행**:
     ```bash
-    npm run build
+    npx capacitor-assets generate --android
     ```
-2.  **Capacitor 동기화**:
-    ```bash
-    npx cap sync
-    ```
-3.  **Android Studio 열기**:
-    ```bash
-    npx cap open android
-    ```
-4.  **앱 실행**: Android Studio 상단의 **Run** 버튼(▶)을 클릭하여 에뮬레이터 또는 연결된 기기에서 앱을 실행합니다.
+3.  이 명령어는 Android의 모든 해상도별 아이콘(`mipmap` 폴더)과 스플래시 이미지를 자동으로 생성 및 덮어쓰기.
 
-### 3.2 아이폰 (iOS)
-1.  프로젝트 전체를 **Mac** 환경으로 복사합니다.
-2.  **의존성 설치 및 빌드**:
-    ```bash
-    npm install
-    npm run build
-    npx cap sync
+## 4. 앱 실행 방법 (테스트용)
+1.  **웹 앱 빌드**: `npm run build`
+2.  **Capacitor 동기화**: `npx cap sync`
+3.  **Android Studio 열기**: `npx cap open android`
+4.  **앱 실행**: 상단의 **Run** 버튼(▶) 클릭.
+
+## 5. 배포용 설치 파일(APK) 만들기
+친구에게 공유하거나 배포하기 위한 **서명된 APK** 생성 방법
+
+1.  **Android Studio** > **Build** > **Generate Signed Bundle / APK...**
+2.  **APK** 선택 > **Create new key store** (최초 1회)
+    *   **Keystore 파일**: 분실하지 않도록 안전한 곳에 보관. (분실 시 업데이트 불가)
+
+3.  **Release** 빌드 변형 선택 > **Create**
+4.  생성된 파일: `android/app/release/app-release.apk`
+
+## 6. 문제 해결 (Troubleshooting)
+
+### Q1. "구글 로그인 실패 (Something went wrong)"
+*   **원인**: 배포용 키스토어(Release Key)의 **SHA-1 지문**이 Firebase에 등록되지 않았음.
+*   **해결**: 배포용 키의 SHA-1을 직접 추출하여 Firebase 콘솔에 추가.
+    ```powershell
+    # 명령 프롬프트(CMD) 또는 PowerShell에서 실행
+    keytool -list -v -keystore "키스토어파일경로.jks" -alias key0
     ```
-3.  **Xcode 열기**:
-    ```bash
-    npx cap open ios
-    ```
-4.  **앱 실행**: Xcode 상단에서 시뮬레이터 기종을 선택하고 **Run** 버튼(▶)을 클릭합니다.
+    (JDK가 환경변수에 없다면 Android Studio 내부의 `jbr\bin\keytool.exe` 사용)
 
-## 4. 앱 업데이트 및 유지보수
-웹 소스 코드(`src`)를 수정한 경우, 네이티브 앱에 변경 사항을 반영하려면 다음 과정을 반복해야 합니다:
-
-1.  코드 수정 (React)
-2.  `npm run build` (웹 자산 재생성)
-3.  `npx cap sync` (네이티브 프로젝트로 자산 복사)
-4.  Android Studio / Xcode에서 앱 재실행
-
-## 5. 문제 해결
-*   **동기화 오류**: `npx cap sync` 실행 시 오류가 발생하면 `dist` 폴더가 존재하는지(`npm run build` 실행 여부) 확인하세요.
-*   **플러그인 오류**: 새로운 네이티브 기능(카메라 등)을 추가한 경우 `npx cap sync`를 다시 실행해야 네이티브 프로젝트에 반영됩니다.
+### Q2. "구글로 로그인 시 프로젝트 이름 변경"
+*   **해결**: Google Cloud Console > **API 및 서비스** > **OAuth 동의 화면** 메뉴에서 [앱 수정]을 눌러 **앱 이름** 변경
