--- a/doc/3_기능_명세서.md
+++ b/doc/3_기능_명세서.md
@@ -36,7 +36,7 @@
 -   **Input**: 이미지 파일 (JPG, PNG 등)
 -   **Process**:
     1. 사용자가 이미지 파일 선택
-    2. Firebase Storage에 업로드 및 다운로드 URL 획득
+    2. Firebase Storage에 업로드 및 다운로드 URL 획득 (이미지 압축 및 리사이징 적용)
     3. 메모 데이터의 `images` 배열에 URL 저장
 -   **Output**: 메모 카드 상단에 첨부된 이미지 표시
 
@@ -102,11 +102,12 @@
 -   **Description**: 구글 계정을 사용하여 간편하게 로그인하는 기능
 -   **Input**: "Google로 로그인" 버튼 클릭
 -   **Process**:
-    1. Firebase Authentication의 Google Provider를 통해 팝업 창 표시
-    2. 사용자가 구글 계정 선택 및 인증
-    3. 인증 성공 시 사용자 정보를 Firestore에 저장 (신규 사용자인 경우)
-    4. 로그인 상태 유지 옵션에 따라 세션 지속성 설정
--   **Output**: 로그인 완료 후 메인 화면으로 이동, 사용자 프로필 표시
+    1. **웹(Web)**: Firebase Authentication의 Google Provider를 통해 팝업/리다이렉트 창 표시
+    2. **모바일(App)**: `@codetrix-studio/capacitor-google-auth` 플러그인을 사용하여 안드로이드/iOS 네이티브 구글 로그인 창 표시
+    3. 사용자가 구글 계정 선택 및 인증
+    4. 인증 성공 시 사용자 정보를 Firestore에 저장 (신규 사용자인 경우)
+    5. 로그인 상태 유지 옵션에 따라 세션 지속성 설정
+-   **Output**: 로그인 완료 후 메인 화면으로 이동, 사용자 프로필 표시 (앱에서는 자동 로그인)
 
 ### F-13: 라벨 관리
 -   **Description**: 메모를 분류하기 위한 라벨을 생성, 수정, 삭제하는 기능
@@ -143,8 +144,8 @@
     -   **백업 (Export)**:
         1.  사용자 ID에 연결된 모든 메모(휴지통/보관함 포함)와 라벨 데이터 조회
         2.  JSON 형식으로 데이터 직렬화
-        3.  `advancekeep_YYYYMMDD_HHMMSS.json` 파일명으로 로컬 다운로드
-        4.  (지원 브라우저의 경우) '다른 이름으로 저장' 대화상자 표시
+        3.  **웹(Web)**: `advancekeep_YYYYMMDD_HHMMSS.json` 파일명으로 로컬 다운로드 ('다른 이름으로 저장')
+        4.  **모바일(App)**: 안드로이드/iOS 기본 공유 시트(Share Sheet) 호출 -> '내 파일' 저장, 카카오톡 전송, 구글 드라이브 업로드 등 선택 가능 (`@capacitor/share`, `@capacitor/filesystem` 사용)
     -   **복구 (Import)**:
         1.  사용자가 `.json` 백업 파일 선택
         2.  파일 내용 파싱 및 유효성 검증
