--- a/doc/6_사용자_메뉴얼.md
+++ b/doc/6_사용자_메뉴얼.md
@@ -74,7 +74,10 @@
 2.  **"내 컴퓨터에 백업"**을 클릭합니다.
 3.  '다른 이름으로 저장' 창이 뜨면 저장할 위치를 선택하고 **저장**을 누릅니다.
 4.  `advancekeep_YYYYMMDD_HHMMSS.json` 형식의 파일이 저장됩니다.
-    *   **모바일(삼성 인터넷 등)**에서는 다운로드 링크 클릭 시 자동으로 저장되지 않는 경우, **"링크 저장"** 또는 **"공유 > 파일에 저장"**을 이용해야 할 수 있습니다.
+    *   **모바일(App)**: '저장' 버튼을 누르면 스마트폰의 **공유하기(Share)** 창이 뜹니다.
+        *   **'내 파일 (Samsung My Files)'**이나 **'파일 앱 (Google Files)'**을 선택하여 원하는 폴더에 저장하세요.
+        *   또는 **카카오톡**, **구글 드라이브**, **Gmail**로 바로 전송할 수도 있습니다.
+    *   **모바일(Web)**: 다운로드 링크를 길게 눌러 "링크 저장"을 선택하세요.
 
 **2. 내 컴퓨터에서 복구하기**
 1.  헤더 오른쪽의 **구름(☁️/동기화) 아이콘**을 클릭합니다.
